revisar las queries a cache con ordenacion
